fixed css for form labels that have hints, they are now aligned to same level as those without

--- a/engines/adva_cms/public/stylesheets/adva_cms/admin/helptip.css
+++ b/engines/adva_cms/public/stylesheets/adva_cms/admin/helptip.css
@@ -2,6 +2,10 @@
   margin-top: 6px;
 }
 
+.move_up {
+  margin-top: -10px;
+}
+
 .padded {
   padding: 0px 15px 15px 15px;
 }
